# bytechomp

./: README.md  pyproject.toml
bytechompx/: __init__.py  basic_parsing_element.py  byte_order.py  data_descriptor.py  reader.py  serialization.py
bytechompx/datatypes/: __init__.py  declarations.py  lookups.py
examples/: parse-sqlite-header.py  tcp-client-server.py
tests/: test_byte_order.py  test_package.py
tests/integration/: test_read_write.py
tests/reader/: test_reader_api.py  test_reader_features.py
tests/serialization/: test_field_validation.py  test_serialization_api.py
