[tool.poetry]
name = "bytechompxx"
version = "0.3.0"
description = "A pure python, declarative binary protocol parser & generator using dataclasses and type hinting."
authors = ["Andrew Spittlemeister <andrew.spittlemeister@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tsuru-robotics/bytechomp"
homepage = "https://github.com/tsuru-robotics/bytechomp"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
bandit = "*"
safety = "*"
pytest = "*"
pylint = "*"
twine = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
